# pathmaster

./: CMakeLists.txt  README.md
include/pathmaster/: pathmaster.hpp
tests/: pathmaster_test.cpp
